welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:11: error: ')' expected but ';' found.
if (estSurBiscuit();) {
                   ^BaggleSeeker:11: error: illegal start of statement
if (estSurBiscuit();) {
                    ^BaggleSeeker:16: error: illegal start of statement
if (estSurBiscuit();) {
                    ^BaggleSeeker:21: error: illegal start of statement
if (estSurBiscuit();) {
                    ^BaggleSeeker:26: error: illegal start of statement
if (estSurBiscuit();) {
                    ^