welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if (estSurBiscuit()) {
	prendBiscuit();
} else {
	avance()
}
if (estSurBiscuit()) {
	prendBiscuit();
} else {
	avance()
}
if (estSurBiscuit();) {
	prendBiscuit();
} else {
	avance()
}
if (estSurBiscuit();) {
	prendBiscuit();
} else {
	avance()
}
if (estSurBiscuit();) {
	prendBiscuit();
} else {
	avance()
}
if (estSurBiscuit();) {
	prendBiscuit();
} else {
	avance()
}